edited router, tested routes, debugged
