# app/src/router.ts
@@ -1,15 +1,25 @@
 import bcrypt from "bcrypt";
 import { validatePassword, validateUser } from "./types/validation";
-import { createUser, deleteUser, findUser } from "./types/UserRepository";
-import { createFile, deleteFile } from "./types/FileRepository";
+import { createUser, findUser } from "./types/UserRepository";
+import { createFolder } from "./types/FolderRepository";
 import { generateAccessToken } from "./jwt";
-import { FileManager } from "./fileManager";
+import { DbFileManager } from "./fileManager";
 import { upload, authMiddleware } from "./middleware";
-import { Request, Response, Router } from "express";
-import path from "path";
-import * as fs from "fs";
+import { Router } from "express";
+import express from "express";
+import cookieParser from "cookie-parser";
+import cors from "cors";
 
 const router = Router();
+
+router.use((req, res, next) => {
+  console.log(`[${req.method}] ${req.url}`);
+  next();
+});
+router.use(express.urlencoded({ extended: true }));
+router.use(express.json());
+router.use(cookieParser());
+router.use(cors());
 
 router.post("/register", async (req, res) => {
   try {
@@ -22,17 +32,9 @@ router.post("/register", async (req, res) => {
     };
     validateUser(newUserObject);
     const user = await createUser(newUserObject);
-    const rootFolder = await createFile({
+    const rootFolder = await createFolder({
       userId: user.id,
       name: user.email,
-      is_folder: true,
-    });
-    fs.mkdir(path.join(__dirname, `../users/${user.email}`), (err) => {
-      if (err) {
-        deleteUser(user.id);
-        deleteFile(rootFolder.id);
-        throw err;
-      }
     });
     res.status(200).send("Registered successfully");
   } catch (err) {
@@ -41,7 +43,6 @@ router.post("/register", async (req, res) => {
   }
 });
 
-// TODO custom redirect
 router.post("/login", async (req, res) => {
   try {
     let user = await findUser({
@@ -79,35 +80,41 @@ router.use(authMiddleware);
 
 router.get("/folderContents", async (req, res) => {
   try {
-    // TODO mb use some kind of middleware to prevent defining file manager repeatedly
-    const fileManager = new FileManager(req.cookies["user"]);
-    // TODO would be great to use parameter instead of body here
-    const contents = await fileManager.getDirectoryContents(req.body.path);
+    const fileManager = await new DbFileManager().initialize(
+      req.cookies["user"].id
+    );
+    const contents = await fileManager.getDirectoryContents(
+      req.query.path ? (req.query.path as string) : ""
+    );
     res.status(200).send(contents);
   } catch (e) {
-    res.status(400).send(e);
+    res.status(400).send((e as Error).message);
     console.log(e);
   }
 });
 
 router.post("/createFolder", async (req, res) => {
   try {
-    const fileManager = new FileManager(req.cookies["user"]);
-    await fileManager.createDirectory(req.body.path, req.body.name);
-    res.status(200).send("success");
+    const fileManager = await new DbFileManager().initialize(
+      req.cookies["user"].id
+    );
+    const result = await fileManager.createDirectoryRecursive(req.body.path);
+    res.status(200).send(result);
   } catch (e) {
-    res.status(400).send(e);
+    res.status(400).send((e as Error).message);
     console.log(e);
   }
 });
 
-router.post("/deleteFolder", async (req, res) => {
+router.delete("/deleteFolder", async (req, res) => {
   try {
-    const fileManager = new FileManager(req.cookies["user"]);
-    await fileManager.deleteDirectory(req.body.path, req.body.name);
+    const fileManager = await new DbFileManager().initialize(
+      req.cookies["user"].id
+    );
+    await fileManager.deleteDirectoryRecursive(req.body.path);
     res.status(200).send("success");
   } catch (e) {
-    res.status(400).send(e);
+    res.status(400).send((e as Error).message);
     console.log(e);
   }
 });
@@ -118,19 +125,30 @@ router.post("/createFile", upload.single("file"), async (req, res) => {
       throw new Error("No file was uploaded");
     }
     const file = req.file;
-    const fileManager = new FileManager(req.cookies["user"]);
-    // TODO couldnt find a way to handle file with file manager.
-    fileManager.createFile(req.body.path, file.originalname);
-    fs.renameSync(
-      file.path,
-      path.join(
-        __dirname,
-        `../users/${req.cookies["user"].email}/${req.body.path}/${file.originalname}`
-      )
+    const fileManager = await new DbFileManager().initialize(
+      req.cookies["user"].id
+    );
+    await fileManager.createFile(
+      req.body.path,
+      req.body.name,
+      file.originalname
     );
     res.status(200).send("success");
   } catch (e) {
-    res.status(400).send(e);
+    res.status(400).send((e as Error).message);
+    console.log(e);
+  }
+});
+
+router.delete("/deleteFile", async (req, res) => {
+  try {
+    const fileManager = await new DbFileManager().initialize(
+      req.cookies["user"].id
+    );
+    const result = await fileManager.deleteFile(req.body.path, req.body.name);
+    res.status(200).send("success");
+  } catch (e) {
+    res.status(400).send((e as Error).message);
     console.log(e);
   }
 });
